# normalization

./: .gitignore  CMakeLists.txt  Makefile  README.md  tags
3rd/: demo.cpp
3rd/include/: DictTrie.hpp  Jieba.hpp  tags
conf/: re_conf_file  regex_set  unit_change.conf  unit_dict.conf  unit_table
include/: normalization.h  parameters.h  recognizer.h  regexrule.h  regularRule.h  util.h
src/: .main.cpp.swp  main  main.cpp  normalization.cpp  parameter.cpp  recognizer.cpp  regexrule.cpp  regularRule.cpp  util.cpp
